--- a/customitems/cheetah_charm.yml
+++ b/customitems/cheetah_charm.yml
@@ -1,10 +1,10 @@
 isEnabled: true
 material: GOLDEN_BOOTS
-name: '&bCheetah Charm'
+name: '&bAspetto del Ghepardo'
 lore:
-- '&aCheetahs can reach speeds of'
-- '&a120 km/h... for about 60'
-- '&aseconds. Make them count!'
+- '&aI ghepardi possono raggiungere i'
+- '&a120 km/h... per circa 60'
+- '&asecondi. Falli fruttare!'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
