--- a/customitems/vampiric_charm.yml
+++ b/customitems/vampiric_charm.yml
@@ -1,10 +1,10 @@
 isEnabled: true
 material: STICK
-name: '&bVampiric Charm'
+name: '&bAspetto del Vampiro'
 lore:
-- '&aNo one can remember where this'
-- '&acame from, and no one can,'
-- '&aforget how dangerous it is...'
+- '&aNessuno ricorda da dove sia saltato'
+- '&afuori, ma nessuno può dimenticare'
+- '&aquanto pericoloso sia...'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
