--- a/customitems/chameleon_charm.yml
+++ b/customitems/chameleon_charm.yml
@@ -1,10 +1,10 @@
 isEnabled: true
 material: LEATHER
-name: '&bChameleon Charm'
+name: '&bAspetto del Camaleonte'
 lore:
-- '&aThe colorful Chameleon can'
-- '&ablend in just about anywhere,'
-- '&aslowly creeping around...'
+- '&aIl colorato Camaleonte'
+- '&apuò fondersi praticamente ovunque,'
+- '&astrisciando lentamente...'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
