--- a/customitems/elephant_charm.yml
+++ b/customitems/elephant_charm.yml
@@ -1,10 +1,10 @@
 isEnabled: true
 material: ANVIL
-name: '&bElephant Charm'
+name: '&bAspetto dell''Elefante'
 lore:
-- '&aGain the power of an elephant'
-- '&astampede, for the cost of the'
-- '&aspeed of an elephant stampede!'
+- '&aOttieni la potenza della carica'
+- '&adi un elefante, al costo della'
+- '&adella velocità della carica di un elefante!'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
