--- a/customitems/firefly_charm.yml
+++ b/customitems/firefly_charm.yml
@@ -1,8 +1,8 @@
 isEnabled: true
 material: GLASS_BOTTLE
-name: '&bFirefly Charm'
+name: '&bAspetto della Lucciola'
 lore:
-- '&aLight up the night!'
+- '&aIllumina la notte!'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
