--- a/customitems/salamander_charm.yml
+++ b/customitems/salamander_charm.yml
@@ -1,9 +1,9 @@
 isEnabled: true
 material: LEATHER
-name: '&bSalamander Charm'
+name: '&bAspetto della Salamandra'
 lore:
-- '&aAlmost as hot as MagmaGuy''s'
-- '&anew mixtape!'
+- '&aQuasi HOT quanto il nuovo mixtape'
+- '&adi MagmaGuy!'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
