--- a/customitems/slowpoke_charm.yml
+++ b/customitems/slowpoke_charm.yml
@@ -1,9 +1,9 @@
 isEnabled: true
 material: CARROT_ON_A_STICK
-name: '&bSlowpoke Charm'
+name: '&bAspetto dello Slowpoke'
 lore:
-- '&aLet''s just hope it doesn''t hit'
-- '&aitself in its confusion...'
+- '&aSperiamo solamente che non si colpisca'
+- '&ada solo nella sua confusione...'
 enchantments:
 - VANISHING_CURSE,1
 potionEffects:
