--- a/menus/buy_or_sell_menu.yml
+++ b/menus/buy_or_sell_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Negozio di articoli personalizzati'
+Shop name: '[EM] Negozio di articoli custom'
 Information button slot: 4
 Buy slot: 11
 Sell slot: 15
