custombosses translations & little others

--- a/custombosses/lightning_fae.yml
+++ b/custombosses/lightning_fae.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: VEX
-name: '&eLightning Fae'
+name: '&eFatina del Fulime'
 level: dynamic
 timeout: 0
 isPersistent: false
