--- a/custombosses/necronomicon_skeleton.yml
+++ b/custombosses/necronomicon_skeleton.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: SKELETON
-name: '&7Summoned Skeleton'
+name: '&7Scheletro Evocato'
 level: dynamic
 timeout: 0
 isPersistent: false
