--- a/custombosses/test_boss.yml
+++ b/custombosses/test_boss.yml
@@ -15,10 +15,10 @@ offHand: SHIELD
 isBaby: false
 powers:
 - invulnerability_knockback.yml
-spawnMessage: A test boss has been spawned!
-deathMessage: A test boss has been slain by $players!
-escapeMessage: A test boss entity has escaped!
-locationMessage: 'Test entity: $location'
+spawnMessage: Un test boss è apparso!
+deathMessage: Un test boss è stato ucciso da $players!
+escapeMessage: Un test boss è fuggito!
+locationMessage: 'Test entità: $location'
 uniqueLootList:
 - magmaguys_toothpick.yml
 dropsEliteMobsLoot: true
@@ -26,6 +26,6 @@ dropsVanillaLoot: true
 trails:
 - BARRIER
 onDamageMessages:
-- I've hit you!
+- Ti ho colpito!
 onDamagedMessages:
-- I've been hit!
+- Sono stato colpito!
