--- a/customitems/the_feller.yml
+++ b/customitems/the_feller.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 material: WOODEN_AXE
-name: '&2The Feller'
+name: '&2Il Tizio'
 lore:
 - '&aAnche mentre dormi,'
 - '&apuoi sentire la sapidità'
