--- a/custombosses/zombie_friends_friend.yml
+++ b/custombosses/zombie_friends_friend.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: ZOMBIE
-name: '&7Zombie Friend'
+name: '&7Amico Zombie'
 level: dynamic
 timeout: 0
 isPersistent: false
