--- a/menus/procedural_shop_menu.yml
+++ b/menus/procedural_shop_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Procedural Item Shop'
+Shop name: '[EM] Negozio Articoli Procedurali'
 Reroll button slot: 4
 Store item slots:
 - 9
@@ -48,8 +48,8 @@ Store item slots:
 - 53
 Minimum store item tier: 0
 Maximum store item tier: 5
-Full inventory message: '&7[EliteMobs] &4Your inventory is full! You can''t buy items
-  until you get some free space.'
+Full inventory message: '&7[EliteMobs] &4Il tuo inventario è pieno! Non puoi comprare oggetti
+  finchè non liberi un po'' di spazio.'
 Reroll button:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
