--- a/mobproperties/elite_blaze.yml
+++ b/mobproperties/elite_blaze.yml
@@ -2,4 +2,4 @@ isEnabled: true
 entityType: BLAZE
 name: '&fLvl &2$level &fElite &eBlaze'
 deathMessages:
-- $player was lit ablaze by $entity!
+- $player è stato immolato da $entity!
