--- a/mobproperties/elite_enderman.yml
+++ b/mobproperties/elite_enderman.yml
@@ -2,5 +2,5 @@ isEnabled: true
 entityType: ENDERMAN
 name: '&fLvl &2$level &fElite &5Enderman'
 deathMessages:
-- $entity sent $player into the void!
-- $player looked at $entity wrong!
+- $entity ha spedito $player nel Vuoto!
+- $player ha guardato $entity in malo modo!
