--- a/mobproperties/elite_vex.yml
+++ b/mobproperties/elite_vex.yml
@@ -2,4 +2,4 @@ isEnabled: true
 entityType: VEX
 name: '&fLvl &2$level &fElite &bVex'
 deathMessages:
-- $entity has vexed $player!
+- $entity ha vessato $player!
