--- a/mobproperties/elitemob_endermite.yml
+++ b/mobproperties/elitemob_endermite.yml
@@ -2,4 +2,4 @@ isEnabled: true
 entityType: ENDERMITE
 name: '&fLvl &2$level &fElite &7Endermite'
 deathMessages:
-- $entity is to $player what David is to Goliath!
+- $entity sta a $player come Davide sta a Golia!
