--- a/mobproperties/elite_polar_bear.yml
+++ b/mobproperties/elite_polar_bear.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: POLAR_BEAR
-name: '&fLvl &2$level &fElite &fPolar Bear'
+name: '&fLvl &2$level &fElite &fOrso Polare'
 deathMessages:
-- $player was clawed to death by $entity!
-- $player was mauled to death by $entity!
+- $player è stato dilaniato da $entity!
+- $player è stato amputato a morte da $entity!
