--- a/mobproperties/elite_silverfish.yml
+++ b/mobproperties/elite_silverfish.yml
@@ -1,5 +1,5 @@
 isEnabled: true
 entityType: SILVERFISH
-name: '&fLvl &2$level &fElite &7Silverfish'
+name: '&fLvl &2$level &fElite &7Pesciolino d''Argento'
 deathMessages:
-- $player mistook $entity for a stone block!
+- $player ha scambiato $entity per un blocco di pietra!
