--- a/mobproperties/elite_wither_skeleton.yml
+++ b/mobproperties/elite_wither_skeleton.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: WITHER_SKELETON
-name: '&fLvl &2$level &fElite &8Wither Skeleton'
+name: '&fLvl &2$level &fElite &8Scheletro Wither'
 deathMessages:
-- $entity's arrows withered away $player!
-- $entity's has withered $player away!
+- Le frecce di $entity hanno sbiancato $player!
+- $entity ha sbiancato completamente $player!
