--- a/customitems/zombie_kings_axe.yml
+++ b/customitems/zombie_kings_axe.yml
@@ -1,8 +1,8 @@
 isEnabled: true
 material: GOLDEN_AXE
-name: '&4Ascia del Re Zombie'
+name: '&4Ascia del Re Zombi'
 lore:
-- L'ascia di colui che gli zombie
+- L'ascia di colui che gli zombi
 - chiamano loro Re.
 - La sete di sangue è palpabile.
 enchantments:
