npcs translations completed!

--- a/npcs/barkeep.yml
+++ b/npcs/barkeep.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 name: Bartley
-role: <Barkeep>
+role: <Barista>
 profession: BUTCHER
 location: EliteMobs_adventurers_guild,285.5,91,209.5,0,0
 greetings:
