--- a/npcs/guild_attendant.yml
+++ b/npcs/guild_attendant.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 name: Gillian
-role: <Guild Attendant>
+role: <Assistente di Gilda>
 profession: LIBRARIAN
 location: EliteMobs_adventurers_guild,283.5,91,229.5,179,0
 greetings:
