--- a/npcs/quest_giver.yml
+++ b/npcs/quest_giver.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 name: Qel'Thuzad
-role: <Quest Giver>
+role: <Gestore Missioni>
 profession: FLETCHER
 location: EliteMobs_adventurers_guild,278.5,91,215.5,0,0
 greetings:
