--- a/npcs/blacksmith.yml
+++ b/npcs/blacksmith.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 name: Greg
-role: <Blacksmith>
+role: <Fabbro>
 profession: TOOLSMITH
 location: EliteMobs_adventurers_guild,285.5,93,261.5,179,0
 greetings:
