--- a/npcs/special_blacksmith.yml
+++ b/npcs/special_blacksmith.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 name: Grog
-role: <Special Blacksmith>
+role: <Fabbro Speciale>
 profession: WEAPONSMITH
 location: EliteMobs_adventurers_guild,282.5,93,258.5,-90,0
 greetings:
