--- a/npcs/combat_instructor.yml
+++ b/npcs/combat_instructor.yml
@@ -24,7 +24,7 @@ dialog:
 - Gli Elite con pistoni\nfluttuanti respingono quando\nti colpiscono
 - Gli Elite con totem\nfluttuanti indeboliscono quando\nti colpiscono
 - Gli Elite con ragnatele\nfluttuanti intrappolano quando\nti colpiscono
-- Gli Elite con teschi\nwhiter fluttuanti sbiancano\nquando ti colpiscono
+- Gli Elite con teschi\nwhiter fluttuanti avvizziscono\nquando ti colpiscono
 - Gli Elite con bauli\nfluttuanti lasciano bottino\nbonus quando uccisi
 - Gli Elite con stivali\ndorati fluttuanti sono più\nveloci
 - Gli Elite con jukeboxe\nfluttuanti ti provocano durante\nil combattimento
