typo in powers & elite nametags translations

--- a/mobproperties/elite_blaze.yml
+++ b/mobproperties/elite_blaze.yml
@@ -1,5 +1,5 @@
 isEnabled: true
 entityType: BLAZE
-name: '&fLvl &2$level &fElite &eBlaze'
+name: '&fLvl &2$level &eBlaze &fElite'
 deathMessages:
 - $player è stato immolato da $entity!
