--- a/mobproperties/elitemob_endermite.yml
+++ b/mobproperties/elitemob_endermite.yml
@@ -1,5 +1,5 @@
 isEnabled: true
 entityType: ENDERMITE
-name: '&fLvl &2$level &fElite &7Endermite'
+name: '&fLvl &2$level &7Endermite &fElite'
 deathMessages:
 - $entity sta a $player come Davide sta a Golia!
