--- a/mobproperties/elite_drowned.yml
+++ b/mobproperties/elite_drowned.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: DROWNED
-name: '&fLvl &2$level &fElite &3Annegato'
+name: '&fLvl &2$level &3Annegato &fElite'
 deathMessages:
 - $player è stato trascinato nelle profondità da $entity!
 - $player è stato affogato da $entity!
