--- a/mobproperties/elite_witch.yml
+++ b/mobproperties/elite_witch.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: WITCH
-name: '&fLvl &2$level &fElite &5Strega'
+name: '&fLvl &2$level &5Strega &fElite'
 deathMessages:
 - $player è diventato il soggetto degli esperimenti di $entity!
 - $player è rimasto stregato da $entity!
