--- a/powers/attack_freeze.yml
+++ b/powers/attack_freeze.yml
@@ -1,4 +1,4 @@
 isEnabled: true
 name: Cryomancer
 effect: PACKED_ICE
-freezeMessage: '&8[EM] &9You''ve been frozen!'
+freezeMessage: '&8[EM] &9Sei stato congelato!'
