--- a/menus/quest_menu.yml
+++ b/menus/quest_menu.yml
@@ -1,5 +1,5 @@
 questTierSelectorMenuTitle: '[EM] Seleziona Grado Missioni'
-questSelectorMenuTitle: '[EM] Seleziona Missione'
+questSelectorMenuTitle: '[EM] Missioni'
 cancelQuestMessage1: '&c&l&m&o---------------------------------------------&cPuoi
   soltanto avere una missione alla volta! Cancellare la tua attuale missione ne resetterà il progresso!'
 cancelQuestMessage2: '&2[Clicka qui per annullare la missione corrente!]'
