--- a/powers/taunt.yml
+++ b/powers/taunt.yml
@@ -2,283 +2,283 @@ isEnabled: true
 name: Taunt
 effect: JUKEBOX
 onDamagedByBow:
-- Fight me like a Player!
-- Afraid to come up-close?
-- I can smell your fear from here!
-- Did you forget your sword?
-- Coward! Bow are no fair!
-- Bows? That's so 2011...
-- Bows are for the weak of mind!
-- Bows are for the weak of spirit!
-- Bows are for the weak of heart!
-- I thought we agreed no bows!
-- Bows? You'll regret that
+- Affrontami come fossi un Giocatore!
+- Paura di avvicinarti?
+- Posso annusare la tua paura da qui!
+- Hai dimenticato la tua spara?
+- Codardo! Non è leale l'arco!
+- Archi? Fanno così 2011...
+- Gli archi sono la debolezza della mente!
+- Gli archi sono la debolezza dello spirito!
+- Gli archi sono la debolezza del cuore!
+- Avevamo detto niente archi!
+- Archi? Ve ne pentirete
 - Ow!
 - Oi!
-- Stop that!
-- Why?!
-- You fight like a Dairy Farmer!
-- You are a pain in the backside!
+- Piantala!
+- Perchè?!
+- Combatti come un mungitore!
+- Siete come un dolore al fondo schiena!
 - En garde! Touche!
 - Hacks!
-- My health is bugged, unkillable!
-- Your hits only make me stronger!
-- Sticks and stones...
-- '''tis but a flesh wound!'
-- Emperor protects!
-- Herobrine, aid me!
-- Behind you! A creeper!
-- I have made a terrible mistake.
-- What doesn't kill me...
-- Zombies dig scars
-- I shall show you my true power!
-- Prepare for my ultimate attack!
-- My reinforcements are arriving!
-- You're going to pay for that!
-- That's going to leave a mark!
-- An eye for an eye!
-- Health insurance will cover that
-- I felt that one in my bones
-- '''tis but a scratch'
-- What was that? A soft breeze?
-- You'll never defeat me like that
-- Pathetic.
-- Weak.
-- That didn't even dent my armor!
-- This is going to be an easy one
-- My grandchildren will feel that
-- Are you even trying?
-- An admin just fully healed me
+- La mia vita è buggata, immortale!
+- I tuoi colpi mi rendono più forte!
+- Pietre e bastoni...
+- E' soltanto una ferita!
+- L'imperatore mi protegge!
+- Herobrine, aiutami!
+- Dietro di te! Un creeper!
+- Ho compiuto un terribile sbaglio.
+- Ciò che non mi uccide...
+- Gli zombi lasciano cicatrici
+- Ti mostrerò il mio reale potere!
+- Prerati per il mio attacco definitivo!
+- I miei rinforzi stanno arrivando!
+- Pagherai per questo!
+- Quello lascerà un segno!
+- Occhio per occhio!
+- L'assicurazione sanitaria lo risarcirà
+- Quello l'ho sentito nelle ossa
+- E' soltanto un graffietto!
+- Che cos'era? Una leggera brezza?
+- Non mi sconfiggerai mai così
+- Patetico.
+- Debole.
+- Non hai nemmeno scalfito la mia armatura!
+- Non sarà una cosa semplice
+- I miei nipoti ne risentiranno
+- Ma ci stai almeno provando?
+- Un admin mi ha appena curato
 - Haxxor!
-- Me? Damaged? Hacks!
-- I can't be defeated!
-- Good thing I'm using hacks!
-- Watch out! Herobrine behind you!
-- My life for Aiur!
-- Your home is getting griefed!
-- Why can't we be friends?
+- Io?...Colpito?...Hacks!
+- Non posso essere sconfitto!
+- Pert fortuna che sto usando hacks!
+- Attento! Herobrine dietro di te!
+- La mia vita per Aiur!
+- Grieferò le vostre case!
+- Perchè non possiamo essere amici?
 - Valhalla!
-- Notch save me!
-- No retreat!
-- Hit me with your best shot!
+- Notch salvami!
+- Ritirata? Giammai!
+- Attaccami col tuo colpo migliore!
 onDeath:
-- Alas, poor Yorick!
-- The rest is silence
-- I shall return
-- Unforgivable
-- I live, I die, I live again!
-- WITNESS ME
-- I ride to valhalla!
+- Yorick figlio di Yorick!
+- Il resto è silenzio
+- Tornerò
+- Imperdonabile
+- Io vivo, io muoio, io vivo ancora!
+- AMMIRATEMI
+- Il Valhalla mi attende!
 - VALHALLA!
 - VALHALLA! DELIVERANCE
-- You win, this time
-- A blight upon your land!
-- A pox upon thee!
-- You'll join me soon enough!
-- This is not over
-- Death is but a setback
-- Not like this...
-- I just wanted to go into space
-- We could've been friends
-- Your sins crawling on your back
-- See you in a bit
-- See you later
-- I'll be waiting for you
-- I will be avenged!
-- I won't go gently into the night
-- Should've gotten life insurance
-- It was my last day on the job
-- It was my last day here
+- Hai vinto...questa volta
+- Che sia devastata la tua terra!
+- La malattia su di voi!
+- Mi raggiungerete presto!
+- Non è finita qui
+- La morte è soltanto una pausa
+- Non così...
+- Volevo solo andare nello spazio
+- Saremmo potuti essere amici
+- I peccati strisciano sulle vostre schiene
+- Ci rivediamo fra poco
+- Arrivederci
+- Ti aspetterò
+- Sarò vendicato!
+- Non ci andrò piano di notte.
+- Avrei dovuto farmi un'assicurazione sulla vita
+- Era il mio ultimo giorno di lavoro
+- Era il mio ultimo giorno qui
 - Et tu, Brute?
 - RIP
 - x.x
 - (x.x)
 - xox
-- Fainted
+- Svenuto
 - GG, WP
 - GG
 - WP
 - GG no RE
 - HAX
 - Hacker
-- Not fair I was lagging
-- You win, this time
-- You monster...
+- Non è giusto, laggavo
+- Avete vinto...questa volta
+- Mostri...
 - Mediocre...
 onTarget:
-- OI! Get over here!
-- What's that I see? A coward?
-- Sir, prepare your fisticuffs!
-- Let's settle this like cavemen!
+- OI! Vieni qui!
+- Che cosa vedo? Un codardo?
+- Sir, preparate i vostri guantoni!
+- Risolviamola come uomini delle caverne!
 - En garde!
-- Look out! A creeper, behind you!
-- Aren't you a right ugly mug!
-- You look delicious.
-- Prepare for trouble!
-- Let the best click spammer win!
+- Attento! Un creeper, dietro di te!
+- Tu si che sei una brutta tazza!
+- Sembri delizioso.
+- Preparati ai problemi!
+- Che vinca lo spammer di click migliore!
 - SPARTAAAAAA
-- I am actually level 9001
-- Not an Elite Mob
-- Poorly disguised Elite Mob
-- Ah, fresh prey!
-- The hunter becomes the hunted!
-- Killing me crashes the server
-- I'm actually a disguised player!
-- I'm not going to drop any loot!
-- Why can't we be friends?
+- Attualmente la mia aura è 9001
+- Non sono un Elite
+- Povero Elite mal mascherato
+- Ah, una preda fresca!
+- Il cacciatore diventa la preda!
+- Uccidermi crasherà il server
+- In verità sono un giocatore!
+- Non lascerò alcun bottino!
+- Perchè non possiamo essere amici?
 - Sssssss
-- This is my last day on the job!
-- Stop right there criminal scum!
-- Prepare to die!
-- Praise the Sun!
+- Questo è il mio ultimo giorno di lavoro!
+- Fermo lì avanzo di galera!
+- Preparati a morire!
+- Loda il sole!
 - Git gud
 - Alea jacta est!
 - Facta, non verba!
-- Skulls for the skull throne!
-- Blood for the blood throne!
-- A sacrifice for Herobrine!
-- I shall pierce the heavens!
-- Just who do you think I am!?
-- A weakling! He's mine.
-- Dibs on the weakling!
-- Accio player!
-- A duel to the death!
-- I challenge you to a duel!
+- Teschi per il mio trono!
+- Sangue per il mio trono!
+- Un sacrificio per Herobrine!
+- Perforerò i cieli!
+- Chi ti credi che io sia!?
+- Un debole! Sei mio!
+- Il debole di mio diritto!
+- Accio giocatore!
+- Un duello all'ultimo sangue!
+- Ti sfido ad un duello!
 - Pika pika!
-- Did you just call me an infernal
-- What did you just call me?
-- I know what you did you monster!
-- This is how your story ends!
-- Prepare for trouble!
+- Mi hai appena chiamato infernale?
+- Come mi hai appena chiamato?
+- So quello che hai fatto, mostro!
+- Ecco come finiscono le storie!
+- Preparati ad avere problemi!
 - I've been preparing for this!
-- I am prepared. Are you?
-- A worthy foe!
-- A worthy opponent!
-- A newbie! It's my lucky day!
-- Your stuff or your life!
-- This is a robbery!
-- It's you! You monster!
-- So hungry, give me your flesh!
-- There he is!
-- Must've been my imagination
-- Hi I'm Mr Meeseeks!
-- I'm Mr Meeseeks, look at me!
-- Your diamonds or your life!
-- For king and country!
-- Hit me with your best shot!
-- Witness me!
-- Witness me blood bag!
-- I go all shiny and chrome!
+- I sono pronto. Tu?
+- Un degno nemico!
+- Un degno sfidante!
+- Un novizio! Il mio giorno fortunato!
+- La borsetta o la vita!
+- Questa è una rapina!
+- Se tu! Mostro!
+- Così affamato...voglio la tua carne!
+- Eccoti lì!
+- Sarà stata la mia immaginazione
+- Ciao, sono Mr Miguardi!
+- Sono Mr Miguardi, guardami!
+- I tuoi diamanti o la tua vita!
+- Per il regno ed il Re!
+- Attaccami col tuo colpo migliore!
+- Ammiratemi!
+- Ammirami sacca di sangue!
+- Continuo tutto splendente e cromato!
 onDamage:
-- A solid hit!
-- He shoots, and he scores!
-- You'll feel that in the morning!
-- Victory approaches!
-- Victory shall be mine!
-- That was only half of my power!
-- You came to the wrong hood!
-- You messed with the wrong mob!
-- Get ready to get mobbed on!
-- This was your last mistake!
-- Feel the burn!
+- Bel colpo!
+- Ed ecco che tira...e segna!
+- Quello lo sentirai domattina!
+- La vittoria si avvicina!
+- La vittoria mi appartiene!
+- Ed era soltanto metà della mia potenza!
+- Sei venuto nel quartiere sbagliato!
+- Te la sei presa col mob sbagliato!
+- Preparati per essere mobbato!
+- Questo è stato il tuo ultimo errore!
+- Senti come brucia!
 - John Cena
-- How are you still standing?
-- Just give up already!
-- Give up!
-- I have the high ground!
-- I will end you!
-- Hope you came prepared for pain!
-- The hunter becomes the hunted!
-- Blood for the blood throne!
-- Skulls for the skull throne!
-- A good player is a dead player!
+- Come fai ancora a stare in piedi?
+- Falla finita e arrenditi!
+- Arrenditi!
+- E' finita! Sto più in alto di te!
+- Ti fermerò!
+- Spero che tu sia abituato a soffrire!
+- Il cacciatore diventa la preda!
+- Sangue per il mio trono!
+- Teschi per il mio trono!
+- Un giocatore morto è un giocatore buono!
 - Git gud!
-- Praise the Sun!
-- The end draws near!
-- You are not prepared.
+- Lodate il sole!
+- La fine si avvicina!
+- NON SIETE PRONTI!
 - Zug zug!
-- Hardly worth my time!
-- I thought this was a challenge?
-- 'Pro tip: don''t get hit'
-- Ima firin mah lazer bwooooooooo
-- For the Emperor!
-- Herobrine shall be pleased!
-- This is the end for you!
-- Are you even trying?
-- Weakling!
-- Pathetic.
-- Maybe this will wake you up.
-- This is just the beggining!
-- We're just getting started!
-- That was just a warm-up!
-- You are no match for me!
-- RKO out of nowhere!
-- I can do this all night long!
-- A fine punching bag!
-- I am the night!
-- I wonder what will break first
-- Revenge for Steve! You monster!
-- Join the mob side!
-- Too easy, too easy!
-- Too easy!
-- You can't defeat me!
+- Che spreco di tempo!
+- Pensavo questa fosse una sfida?
+- 'Pro tip: non farti colpire'
+- Sto per lanciare il mio laser BWOOOOOOOOOOOO
+- Per l'imperatore!
+- Herobrine sarà soddisfatto!
+- Questa per te è la fine!
+- Ma ci stai almeno provandp?
+- Debole!
+- Patetico.
+- Forse questo ti sveglierà.
+- Questo è solo l'inizio!
+- Si inizia a fare sul serio!
+- Quello era solo di riscaldamento!
+- Sono di un altro livello!
+- RKO dal nulla!
+- Posso andare avanti tutta la notte!
+- Un buon sacco da box!
+- Io sono la notte!
+- Chissà chi cadrà per primo
+- Vendetta per Steve! Mostro!
+- Passa al lato oscuro dei mob!
+- Facile, troppo facile!
+- Troppo facile!
+- Non posso essere sconfitto!
 - Pikachuuuuuu
 - Avada kedavra!
 - Crucio!
 - Jierda!
-- A critical hit!
-- This is what skills looks like!
-- 9001 damage!
-- Still standing?
-- Face your defeat!
-- A taste of pain to come!
-- I'll make you endangered!
+- Colpo critico!
+- Ecco cosa significa essere skillati!
+- 9001 di danno!
+- Ancora in piedi?
+- Accetta la tua sconfitta!
+- Un assaggio del dolore che avrai!
+- Ti estinguerò!
 onDamaged:
 - Ow!
 - Oi!
-- Stop that!
-- Why?!
-- You fight like a Dairy Farmer!
-- You are a pain in the backside!
+- Piantala!
+- Perchè?!
+- Combatti come un mungitore!
+- Siete come un dolore al fondo schiena!
 - En garde! Touche!
 - Hacks!
-- My health is bugged, unkillable!
-- Your hits only make me stronger!
-- Sticks and stones...
-- '''tis but a flesh wound!'
-- Emperor protects!
-- Herobrine, aid me!
-- Behind you! A creeper!
-- I have made a terrible mistake.
-- What doesn't kill me...
-- Zombies dig scars
-- I shall show you my true power!
-- Prepare for my ultimate attack!
-- My reinforcements are arriving!
-- You're going to pay for that!
-- That's going to leave a mark!
-- An eye for an eye!
-- Health insurance will cover that
-- I felt that one in my bones
-- '''tis but a scratch'
-- What was that? A soft breeze?
-- You'll never defeat me like that
-- Pathetic.
-- Weak.
-- That didn't even dent my armor!
-- This is going to be an easy one
-- My grandchildren will feel that
-- Are you even trying?
-- An admin just fully healed me
+- La mia vita è buggata, immortale!
+- I tuoi colpi mi rendono più forte!
+- Pietre e bastoni...
+- E' soltanto una ferita!
+- L'imperatore mi protegge!
+- Herobrine, aiutami!
+- Dietro di te! Un creeper!
+- Ho compiuto un terribile sbaglio.
+- Ciò che non mi uccide...
+- Gli zombi lasciano cicatrici
+- Ti mostrerò il mio reale potere!
+- Prerati per il mio attacco definitivo!
+- I miei rinforzi stanno arrivando!
+- Pagherai per questo!
+- Quello lascerà un segno!
+- Occhio per occhio!
+- L'assicurazione sanitaria lo risarcirà
+- Quello l'ho sentito nelle ossa
+- E' soltanto un graffietto!
+- Che cos'era? Una leggera brezza?
+- Non mi sconfiggerai mai così
+- Patetico.
+- Debole.
+- Non hai nemmeno scalfito la mia armatura!
+- Non sarà una cosa semplice
+- I miei nipoti ne risentiranno
+- Ma ci stai almeno provando?
+- Un admin mi ha appena curato
 - Haxxor!
-- Me? Damaged? Hacks!
-- I can't be defeated!
-- Good thing I'm using hacks!
-- Watch out! Herobrine behind you!
-- My life for Aiur!
-- Your home is getting griefed!
-- Why can't we be friends?
+- Io?...Colpito?...Hacks!
+- Non posso essere sconfitto!
+- Pert fortuna che sto usando hacks!
+- Attento! Herobrine dietro di te!
+- La mia vita per Aiur!
+- Grieferò le vostre case!
+- Perchè non possiamo essere amici?
 - Valhalla!
-- Notch save me!
-- No retreat!
-- Hit me with your best shot!
+- Notch salvami!
+- Ritirata? Giammai!
+- Attaccami col tuo colpo migliore!
