my favourite book...translated!

--- a/powers/zombie_necronomicon.yml
+++ b/powers/zombie_necronomicon.yml
@@ -1,28 +1,30 @@
 isEnabled: true
 name: Necronomicon
 effect: ENCHANTED_BOOK
-summoningChant: Nor is it to be thought...that man is either the oldest or the last
-  of earth's masters, or that the common bulk of life and substance walks alone. The
-  Old Ones were, the Old Ones are, and the Old Ones shall be. Not in the spaces we
-  know, but between them, they walk serene and primal, undimensioned and to us unseen.
-  Yog-Sothoth knows the gate. Yog-Sothoth is the gate. Yog-Sothoth is the key and
-  guardian of the gate. Past, present, future, all are one in Yog-Sothoth. He knows
-  where the Old Ones broke through of old, and where They shall break through again.
-  He knows where They had trod earth's fields, and where They still tread them, and
-  why no one can behold Them as They tread. By Their smell can men sometimes know
-  Them near, but of Their semblance can no man know, saving only in the features of
-  those They have begotten on mankind; and of those are there many sorts, differing
-  in likeness from man's truest eidolon to that shape without sight or substance which
-  is Them. They walk unseen and foul in lonely places where the Words have been spoken
-  and the Rites howled through at their Seasons. The wind gibbers with Their voices,
-  and the earth mutters with Their consciousness. They bend the forest and crush the
-  city, yet may not forest or city behold the hand that smites. Kadath in the cold
-  waste hath known Them, and what man knows Kadath? The ice desert of the South and
-  the sunken isles of Ocean hold stones whereon Their seal is engraver, but who hath
-  seen the deep frozen city or the sealed tower long garlanded with seaweed and barnacles?
-  Great Cthulhu is Their cousin, yet can he spy Them only dimly. Iä! Shub-Niggurath!
-  As a foulness shall ye know Them. Their hand is at your throats, yet ye see Them
-  not; and Their habitation is even one with your guarded threshold. Yog-Sothoth is
-  the key to the gate, whereby the spheres meet. Man rules now where They ruled once;
-  They shall soon rule where man rules now. After summer is winter, after winter summer.
-  They wait patient and potent, for here shall They reign again.
+summoningChant: Né si deve pensare...che l'uomo sia il più vecchio o l'ultimo
+  dei padroni della terra, o che la maggior parte comune della vita e della sostanza
+  cammina da sola. Gli Antichi erano, gli Antichi lo sono, e gli Antichi lo saranno.
+  Non negli spazi che conosciamo, ma tra loro camminano sereni e primordiali, non 
+  dimensionati e per noi invisibili. Yog-Sothoth conosce il cancello. Yog-Sothoth 
+  è il cancello. Yog-Sothoth è la chiave ed il guardiano della porta. Passato, presente, 
+  futuro, sono tutti uno in Yog-Sothoth. Sa dove gli Antichi hanno fatto irruzione 
+  nell'antichità e dove dovranno sfondare di nuovo. Sa dove avevano calpestato i campi
+  della terra, e dove ancora li calpestano, e perché nessuno li può vedere mentre 
+  calpestano. Con il loro olfatto gli uomini possono a volte conoscerli vicino, ma 
+  della loro somiglianza non può nessuno sapere, risparmiando solo nelle caratteristiche 
+  di coloro che hanno generato sull'umanità; e di quelli ce ne sono molti, che differiscono 
+  per somiglianza dall'eidolon più vero dell'uomo a quella forma senza vista o sostanza 
+  che è Loro. Camminano invisibili e sporchi in luoghi solitari in cui le Parole sono 
+  state dette e i riti ululavano alle loro stagioni. Il vento rimbomba con le loro voci
+  e la terra mormora con la loro coscienza. Piegano la foresta e schiacciano la città, 
+  eppure la foresta o la città non possono vedere la mano che colpisce. Kadath nei 
+  rifiuti freddi li ha conosciuti e quale uomo conosce Kadath? Il deserto di ghiaccio 
+  del sud e le isole sommerse dell'Oceano detengono pietre su cui il loro sigillo è
+  incisore, ma chi ha visto la città gelata profonda o la torre sigillata a lungo 
+  ghirlanda di alghe e cirripedi? Il grande Cthulhu è il loro cugino, eppure può spiarli
+  solo debolmente. IA! Shub-Niggurath! Che follia conoscerli conoscerli. La loro mano è alla 
+  tua gola, ma non li vedi; e la loro abitazione è tutt'uno con la tua soglia protetta. 
+  Yog-Sothoth è la chiave del cancello, per cui le sfere si incontrano. L'uomo governa 
+  ora dove governavano una volta; Presto governeranno dove governa l'uomo adesso. 
+  Dopo l'estate è inverno, dopo l'inverno estate. Aspettano pazienti e potenti, 
+  perché qui regneranno di nuovo.
